--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/lib/index.js",
   "type": "dist/lib/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js"
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -21,16 +21,24 @@
   },
   "homepage": "https://github.com/FrankFang/frank-test-2#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^27.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^27.0.4",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^27.0.3",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
