--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,10 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "importHelpers": true,
     "strictNullChecks": true,
+    "esModuleInterop": true,
     // "suppressImplicitAnyIndexErrors": true,
     // https://github.com/Microsoft/TypeScript/issues/28762#issuecomment-443406607
     "allowSyntheticDefaultImports": true,
