import all svg files automatically

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
     "baseUrl": ".",
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom"],
+    "lib": [
+      "es6",
+      "dom"
+    ],
     "sourceMap": true,
     "jsx": "react",
     "moduleResolution": "node",
@@ -23,6 +26,8 @@
     "noUnusedLocals": true
   },
   "include": [
+    "types/**/*",
+    "lib/**/*"
   ],
   "exclude": [
     "node_modules",
