--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FUI",
+  "name": "Happy-UI",
   "version": "1.0.0",
   "description": "",
   "main": "dist/lib/index.js",
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FrankFang/frank-test-2.git"
+    "url": "git+https://github.com/Rylai-Zihang/react-ui.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/FrankFang/frank-test-2/issues"
+    "url": "https://github.com/Rylai-Zihang/react-ui/issues"
   },
-  "homepage": "https://github.com/FrankFang/frank-test-2#readme",
+  "homepage": "https://github.com/Rylai-Zihang/react-ui#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^27.0.4",
     "react-test-renderer": "^17.0.2",
+    "svg-sprite-loader": "^4.1.3",
     "ts-jest": "^27.0.3",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
