--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^27.0.4",
     "react-test-renderer": "^17.0.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "svg-sprite-loader": "^4.1.3",
     "ts-jest": "^27.0.3",
     "typescript": "^3.3.3333",
@@ -39,6 +41,8 @@
   },
   "dependencies": {
     "cross-env": "^7.0.3",
+    "css-loader": "^2.1.1",
+    "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
