--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@babel/preset-react": "^7.14.5",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^27.0.2",
+    "enzyme": "^3.11.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^27.0.4",
     "react-test-renderer": "^17.0.2",
