--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --config=jest.config.js",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+    "ci": "cross-env NODE_ENV=test JEST_JUNIT_OUTPUT=./test-results/jest/results.xml jest --config=jest.config.ci.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "enzyme": "^3.11.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^27.0.4",
+    "jest-junit": "^12.2.0",
     "react-test-renderer": "^17.0.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
