--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "css-loader": "^2.1.1",
+    "file-loader": "^6.2.0",
     "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
