--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^27.0.4",
     "jest-junit": "^12.2.0",
+    "raw-loader": "^4.0.2",
     "react-test-renderer": "^17.0.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -51,6 +52,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight": "^0.14.0",
     "react-router-dom": "^5.3.0"
   }
 }
