--- a/package.json
+++ b/package.json
@@ -29,10 +29,16 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^27.0.2",
+    "babel-loader": "^8.2.2",
     "enzyme": "^3.11.0",
+    "gray-matter": "^4.0.3",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^27.0.4",
     "jest-junit": "^12.2.0",
+    "markdown-it": "^12.2.0",
+    "markdown-it-anchor": "^8.3.1",
+    "markdown-it-container": "^3.0.0",
+    "markdown-it-toc-done-right": "^4.2.0",
     "raw-loader": "^4.0.2",
     "react-test-renderer": "^17.0.2",
     "sass-loader": "^7.1.0",
