--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-highlight": "^0.14.0",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "styled-jsx": "^4.0.1"
   }
 }
